--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MONGODB_URI= your_mongodb_uri
+MONGODB_URI=mongodb+srv://haseenacl:Haseena123@cluster0.sxhubug.mongodb.net/?appName=Cluster0
+PORT=5000
 
 #Cloudinary
 CLOUDINARY_API_SECRET= your_cloudinary_api_secret
